# jikan-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: anime.rs  character.rs  clubs.rs  common.rs  genre.rs  lib.rs  manga.rs  misc.rs  people.rs  random.rs  ransdom.rs  users.rs
tests/: anime.rs  character.rs  clubs.rs  genre.rs  manga.rs  random.rs  users.rs
tests/common/: mod.rs
